add taski preview

--- a/index.html
+++ b/index.html
@@ -59,18 +59,18 @@
                     class="underline-prime">PROJECTS</span></h4>
             <div class="project-card">
                 <div class="project-details">
-                    <h5 class="project-title">Bible Scramble</h5>
+                    <h5 class="project-title">Taski</h5>
                     <a href="http://"><p class="role"><span
                                 class="role-title">Check the
                                 project</span></p></a>
                     <div class="tags">
                         <span class="tag">Flutter</span>
-                        <span class="tag">Firebase</span>
-                        <span class="tag">Rest API</span>
+                        <span class="tag">State Management</span>
+                        <span class="tag">UI Design</span>
                     </div>
                 </div>
 
-                <img src="img/img-2.png" alt="Project"
+                <img src="img/image1.jpeg" alt="Project"
                     class="project-image">
             </div>
             <div class="project-card">
