--- a/index.html
+++ b/index.html
@@ -70,13 +70,14 @@
                     </div>
                 </div>
 
-                <img src="img/image1.jpeg" alt="Project"
+                <img src="img/taski.png" alt="Project"
                     class="project-image">
             </div>
             <div class="project-card">
                 <div class="project-details">
                     <h5 class="project-title">Midjo</h5>
-                    <a href="http://"><p class="role"><span
+                    <a href="https://github.com/kodjozecodeur/todo_app"><p
+                            class="role"><span
                                 class="role-title">Check the
                                 project</span></p></a>
                     <div class="tags">
